[package]
name = "alacritty-theme-switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
dbus = "0.9.7"
futures = "0.3.28"
nonblock = "0.2.0"
tokio = {"version" = "1", features = ["full"]}
zbus = "3.13.1"
zvariant = "3.14.0"

[features]
futures = []
